Include a button toTop, correct mobile vercion

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="header__user_mobile">
                     <ul class="header__user-list">
-                        <li class="header__user-item"><a href="!#" class="header__user-link">Login</a></li>
+                        <li class="header__user-item header__user-item-login"><a href="!#" class="header__user-link">Login</a></li>
                         <li class="header__user-item"><a href="!#" class="header__user-link"><img src="img/svg/heart.svg" alt="Wishing list"></a></li>
                         <li class="header__user-item"><a href="!#" class="header__user-link"><img src="img/svg/shopping-bag.svg" alt="shopping cart"></a></li>
                     </ul>
@@ -675,6 +675,7 @@
             </div>
         </div>
     </footer>
+    <a title="up" class="back-to-top" id="back2Top">&#9650;</a>
     <!--footer end -->
     <script src="js/main.js"></script>
 </body>
