added new class of SliderCarousel. Have started one slider on the page

--- a/index.html
+++ b/index.html
@@ -571,6 +571,20 @@
                                 </div>
                             </div>
                     </div>
+                    <div class="reviews__item">
+                        <div class="reviews__item-wrapper">
+                            <h3 class="review__title">WE LOVE A GOOD COMPLIMENT</h3>
+                            <div class="review__content">
+                                <blockquote>
+                                    <p>
+                                        Nam accumsan est vel neque varius, a gravida diam dignissim. 
+                                        Maecenas eu dui porta, pellentesque nisi id, bibendum erat. 
+                                        Proin condimentum lacinia tellus.
+                                    </p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                  <!-- The dots/circles -->
             <div class="review-slider__dots">
@@ -677,6 +691,8 @@
     </footer>
     <a title="up" class="back-to-top" id="back2Top">&#9650;</a>
     <!--footer end -->
+    <script src="js/sliderCarousel.js"></script>
     <script src="js/main.js"></script>
+    
 </body>
 </html>
